--- a/index.html
+++ b/index.html
@@ -43,14 +43,10 @@
   </head>
 
   <body class="dark">
-    <!-- PRELOADER -->
-    <div id="preloader">
-      <div class="loader_line"></div>
-    </div>
-    <!-- /PRELOADER -->
+  
 
     <!-- WRAPPER ALL -->
-    <div class="beny_tm_all_wrap" data-magic-cursor="">
+    <div class="beny_tm_all_wrap" data-magic-cursor="hide">
       <!-- If you want disable magic cursor add value "hide" -->
 
       <!-- MODALBOX NEWS -->
