--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   
 
     <!-- WRAPPER ALL -->
-    <div class="beny_tm_all_wrap" data-magic-cursor="hide">
+    <div class="beny_tm_all_wrap" data-magic-cursor="">
       <!-- If you want disable magic cursor add value "hide" -->
 
       <!-- MODALBOX NEWS -->
