--- a/index.html
+++ b/index.html
@@ -1371,7 +1371,7 @@
                     <textarea id="message" placeholder="Message*"></textarea>
                   </div>
                   <div class="beny_tm_button">
-                    <a id="send_message" href="#">
+                    <a id="send_message" >
                       <span class="wrapper">
                         <span class="first">Submit</span>
                         <span class="second">Submit</span>
