--- a/index.html
+++ b/index.html
@@ -1343,7 +1343,7 @@
               </div>
               <div class="fields">
                 <form
-                  action="modal/contact.php"
+                  action="/"
                   method="post"
                   class="contact_form"
                   id="contact_form"
